--- a/client/src/components/unique/navbar.module.css
+++ b/client/src/components/unique/navbar.module.css
@@ -5,3 +5,10 @@
     align-items: center;
     height: 3em;
 }
+
+.icon {
+    color: aliceblue;
+    font-size: 2em;
+    vertical-align: middle;
+}
+
