I think I'm done with the Front end, so now onto the backend

--- a/client/src/general.module.css
+++ b/client/src/general.module.css
@@ -48,6 +48,11 @@
 }
 
 /* ======================== Margin ======================== */
+
+.topMarginL {
+    margin: 3em 0em 0em 0em;
+}
+
 .topMarginXL {
     margin: 5em 0em 0em 0em;
 }
@@ -67,4 +72,10 @@
 
 .positionStatic {
     position: static;
+}
+
+
+/* ======================== zIndex ======================== */
+.zIndex {
+    z-index: 10;
 }
