--- a/client/src/components/unique/setting.module.css
+++ b/client/src/components/unique/setting.module.css
@@ -14,43 +14,21 @@
   border-radius: 0.3em;
 }
 
-.usernameChange {
+.optionsChange {
   height: 5em;
   width: 50%;
   min-width: 17em;
-  background: lightsalmon;
   align-self: center;
   border-radius: 0.5em;
   background: rgb(82, 82, 82);
   position: relative;
 }
 
-.usernameChange:hover {
+.optionsChange:hover {
   cursor: pointer;
 }
 
-.usernameText {
-  position:absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.pwChange {
-  height: 5em;
-  width: 50%;
-  min-width: 17em;
-  background: lightsalmon;
-  align-self: center;
-  border-radius: 0.5em;
-  background: rgb(82, 82, 82);
-  position: relative;
-}
-.pwChange:hover {
-  cursor: pointer;
-}
-
-.pwText {
+.optionsText {
   position:absolute;
   top: 50%;
   left: 50%;
