So I've go to make posts and store them with at least one user, but I can 't get it to present the posts on the feed, Its because of the useEffect and the State, where the UseEffect is happening right after the render, but the state happens before hte ffect and because of that, the state is always one step behind itself from what I want it to be

--- a/client/src/components/unique/feed.module.css
+++ b/client/src/components/unique/feed.module.css
@@ -20,6 +20,11 @@
   /* background: lightblue; */
 }
 
+.feedPost {
+  background: lightseagreen;
+  margin: 1em;
+}
+
 .clickToPost {
   background: rgb(48, 48, 48);
   border-radius: 2em;
