--- a/client/src/components/unique/search.module.css
+++ b/client/src/components/unique/search.module.css
@@ -25,30 +25,68 @@
 
 .searchResults {
   width: 18em;
-  height: calc(100vh / 1.5);
+  height: calc(100vh / 1.485);
   background: rgb(36, 36, 36);
+  cursor: pointer;
 }
 
 .searchBox {
   font-size: 1.2em;
   background: rgb(78, 78, 78);
   padding: 1em;
-  border-radius: 1em;
+  border-radius: 0.3em;
+  /* border-top-right-radius: 0em;
+  border-top-left-radius: 0em; */
   width: 87%;
   outline: none;
   border: none;
+}
+
+.chooseIcon {
+  font-size: 2em;
+  align-self: center;
+  margin: 0em 0em 0em .3em;
+  color:rgb(202, 202, 202);
+}
+
+.reuseIcon {
+  font-size: 1.8em;
+  align-self: center;
+  margin: 0em 0em 0em .3em;
+  color:rgb(202, 202, 202);
+}
+
+.searchText {
+  font-size: 1.4em;
+  align-self: center;
+  color:rgb(202, 202, 202);
+  margin: 0em 0em 0em .5em;
+
 }
 
 .recentSearches {
   font-size: 1.2em;
   height: 3em;
   width: 100%;
-  /* background: teal; */
+  border-radius: 0.3em;
+  display: flex;
+  /* background: rgb(61, 61, 61); */
+}
+.recentSearches:hover {
+  cursor: pointer;
+  background: rgb(61, 61, 61);
 }
 
 .suggestions {
-    font-size: 1.2em;
-    height: 3em;
-    width: 100%;
-    /* background: teal; */
+  font-size: 1.2em;
+  height: 3em;
+  width: 100%;
+  border-radius: 0.3em;
+  display: flex;
+  /* background: lightgoldenrodyellow; */
+}
+
+.suggestions:hover {
+  cursor: pointer;
+  background: rgb(61, 61, 61);
 }
