got the search overlay to work for every other tab and also created the people finder page, and I started compartmentalizing the components, but now I have an apparent key mapping issue that is annoying the hell out of me

--- a/client/src/components/unique/search.module.css
+++ b/client/src/components/unique/search.module.css
@@ -25,7 +25,8 @@
 
 .searchResults {
   width: 18em;
-  height: calc(100vh / 1.485);
+  /* height: calc(100vh / 1.485); */
+  height: auto;
   background: rgb(36, 36, 36);
   cursor: pointer;
 }
