So I think I got everything working so far, the search bar clicking on suggestions and past searches brings you to the people's finding page with the right info now, need to dbl check tmr if everything is in place though since I have been moving stuff around and my mind is kkinda fried rn, but next steps are to make the friend request button and the finally linking friends together, which I hope is easier than what I expect

--- a/client/src/components/unique/peopleFinder.module.css
+++ b/client/src/components/unique/peopleFinder.module.css
@@ -1,3 +1,14 @@
 .background {
-    background: rgb(32, 32, 32);
+  background: rgb(32, 32, 32);
+}
+
+.peoplesColumn {
+  width: calc(100vw / 2);
+  min-width: 27em;
+  max-width: calc(50em);
+  /* background: lightblue; */
+}
+
+.userData {
+  display: flex;
 }
