--- a/client/src/general.module.css
+++ b/client/src/general.module.css
@@ -18,6 +18,14 @@
   /* justify-content: space-around; */
 }
 
+.flexGrow {
+  flex-grow: 2;
+}
+
+.alignCenterSelf {
+  align-self: center;
+}
+
 .white {
   color: aliceblue;
 }
