Got the Personal timeline to work when the current user navs to their profile and also fixed up the register page when someone would finish their regis they wouldn't be redirected to the login page and the other problem where clicking the sign up button automatically leads you to the login page even though the user has finished their regis

--- a/client/src/pages/userProfile.module.css
+++ b/client/src/pages/userProfile.module.css
@@ -11,13 +11,13 @@
 }
 
 .userFriends {
-    width: 30%;
-    margin: 0em 2em 0em 0em;
+    width: 40%;
+    margin: 0em .5em 0em 0em;
     background:lightcoral;
 }
 
 .userPosts {
-    background: lightgoldenrodyellow;
+    /* background: lightgoldenrodyellow; */
 }
 
 .feedColumn {
