created the add friend button and also go the route to work, so there is one req in the db rn, I need to make a friendrequest section probs inthe search section now

--- a/client/src/components/unique/peopleFinder.module.css
+++ b/client/src/components/unique/peopleFinder.module.css
@@ -12,3 +12,13 @@
 .userData {
   display: flex;
 }
+
+.addFriendBtn {
+  background:rgb(160, 0, 75);
+  padding: .8em;
+  border-radius: .3em;
+}
+
+.addFriendBtn:hover {
+  cursor: pointer;
+}
