--- a/client/src/general.module.css
+++ b/client/src/general.module.css
@@ -26,6 +26,14 @@
   align-self: center;
 }
 
+.alignStartSelf {
+  align-self: flex-start;
+}
+
+.alignEndSelf {
+  align-self: flex-end;
+}
+
 .white {
   color: aliceblue;
 }
