--- a/client/src/pages/userProfile.module.css
+++ b/client/src/pages/userProfile.module.css
@@ -13,7 +13,7 @@
 .userFriends {
   width: 40%;
   margin: 0em 0.5em 0em 0em;
-  background: lightcoral;
+  /* background: lightcoral; */
 }
 
 .userPosts {
@@ -25,4 +25,40 @@
   min-width: 27em;
   max-width: calc(50em);
   /* background: lightblue; */
+}
+
+.friendContainer {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0em 0em 1em 1em;
+}
+.eachFriend {
+  margin: 1em 1em 0em 0em;
+  padding: 0.5em 0em 0em 0em;
+  background: rgb(68, 68, 68);
+  width: calc(100vw / 13);
+  height: 6.5em;
+  border-radius: 0.7em;
+}
+
+.eachFriend:hover {
+  cursor: pointer;
+  background: rgb(95, 95, 95);
+}
+
+.flexColumn {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.friendPic {
+  font-size: 4em;
+  align-self: center;
+  /* background:rgb(160, 0, 75); */
+}
+
+.friendName {
+  font-size: 2em;
+  align-self: center;
 }
