got the buttons to change based on if you're already friends with th epeople you've searched in the People Finder file and I also got it so that whenever you click your timeline icon on the navbar, that it refreshes with your info

--- a/client/src/pages/userProfile.module.css
+++ b/client/src/pages/userProfile.module.css
@@ -32,6 +32,7 @@
   flex-wrap: wrap;
   padding: 0em 0em 1em 1em;
 }
+
 .eachFriend {
   margin: 1em 1em 0em 0em;
   padding: 0.5em 0em 0em 0em;
@@ -39,6 +40,21 @@
   width: calc(100vw / 13);
   height: 6.5em;
   border-radius: 0.7em;
+}
+
+.friendBtn {
+  background:rgb(160, 0, 75);
+  height: auto;
+}
+
+.unfriendBtn {
+  background:rgb(83, 0, 39);
+  height: auto;
+}
+
+.chatBtn {
+  background:rgb(160, 0, 75);
+  height: auto;
 }
 
 .eachFriend:hover {
