--- a/client/src/components/unique/peopleFinder.module.css
+++ b/client/src/components/unique/peopleFinder.module.css
@@ -19,6 +19,12 @@
   border-radius: .3em;
 }
 
+.sentReqbtn {
+  background:rgb(83, 0, 39);
+  padding: .8em;
+  border-radius: .3em;
+}
+
 .addFriendBtn:hover {
   cursor: pointer;
 }
