everytime I fix something, I enter a new domain and get a new error, which sucks but it's aight--> got the people finder page to refresh when they send a request to one of the people, also Got the timeline unfriend button to refresh that user's timeline when the unfriend button is clicked, STILL need to pu tin functionality for the add friend btn on the timeline, also got the timelines to change when user clicks on a friend of a friend

--- a/client/src/pages/userProfile.module.css
+++ b/client/src/pages/userProfile.module.css
@@ -42,24 +42,57 @@
   border-radius: 0.7em;
 }
 
-.friendBtn {
-  background:rgb(160, 0, 75);
-  height: auto;
-}
-
-.unfriendBtn {
-  background:rgb(83, 0, 39);
-  height: auto;
-}
-
-.chatBtn {
-  background:rgb(160, 0, 75);
-  height: auto;
-}
-
 .eachFriend:hover {
   cursor: pointer;
   background: rgb(95, 95, 95);
+}
+
+.friendBtn {
+  margin: 1.1em 0em 0em 0em;
+  padding: 1em 0em;
+  border-radius: 0.7em;
+  width: calc(100vw / 13);
+  text-align: center;
+  background:rgb(160, 0, 75);
+  height: auto;
+}
+
+.friendBtn:hover {
+  cursor: pointer;
+  background:rgb(83, 0, 39);
+  color: rgb(202,202,202);
+}
+/* 
+.unfriendBtn {
+  margin: 1.1em 0em 0em 0em;
+  padding: 1em 0em;
+  border-radius: 0.7em;
+  width: calc(100vw / 13);
+  text-align: center;
+  background:rgb(160, 0, 75);
+  height: auto;
+}
+
+.unfriendBtn:hover {
+  cursor: pointer;
+  background:rgb(83, 0, 39);
+  color: rgb(202,202,202);
+} */
+
+.chatBtn {
+  margin: 1.1em 0em 0em 1em;
+  padding: 1em 0em;
+  border-radius: 0.7em;
+  width: calc(100vw / 13);
+  text-align: center;
+  background:rgb(160, 0, 75);
+  height: auto;
+}
+
+.chatBtn:hover {
+  cursor: pointer;
+  background:rgb(83, 0, 39);
+  color: rgb(202,202,202);
 }
 
 .flexColumn {
