--- a/client/src/components/unique/peopleFinder.module.css
+++ b/client/src/components/unique/peopleFinder.module.css
@@ -13,6 +13,17 @@
   display: flex;
 }
 
+.nameHyperlink {
+  padding: 0em 1em 0em 1em;
+  border-radius: .3em;
+}
+
+.nameHyperlink:hover {
+  background:rgb(160, 0, 75);
+  cursor: pointer;
+  transition: linear .2s;
+}
+
 .addFriendBtn {
   background:rgb(160, 0, 75);
   padding: .8em;
