--- a/client/src/pages/userProfile.module.css
+++ b/client/src/pages/userProfile.module.css
@@ -62,6 +62,16 @@
   background:rgb(83, 0, 39);
   color: rgb(202,202,202);
 }
+
+.sentBtn {
+  margin: 1.1em 0em 0em 0em;
+  padding: 1em 0em;
+  border-radius: 0.7em;
+  width: calc(100vw / 13);
+  text-align: center;
+  background:rgb(83, 0, 39);
+  height: auto;
+}
 /* 
 .unfriendBtn {
   margin: 1.1em 0em 0em 0em;
