--- a/client/src/components/unique/peopleFinder.module.css
+++ b/client/src/components/unique/peopleFinder.module.css
@@ -15,25 +15,25 @@
 
 .nameHyperlink {
   padding: 0em 1em 0em 1em;
-  border-radius: .3em;
+  border-radius: 0.3em;
 }
 
 .nameHyperlink:hover {
-  background:rgb(160, 0, 75);
+  background: rgb(141, 0, 66);
   cursor: pointer;
-  transition: linear .2s;
+  transition: linear 0.2s;
 }
 
 .addFriendBtn {
-  background:rgb(160, 0, 75);
-  padding: .8em;
-  border-radius: .3em;
+  background: rgb(141, 0, 66);
+  padding: 0.8em;
+  border-radius: 0.3em;
 }
 
 .sentReqbtn {
-  background:rgb(83, 0, 39);
-  padding: .8em;
-  border-radius: .3em;
+  background: rgb(83, 0, 39);
+  padding: 0.8em;
+  border-radius: 0.3em;
 }
 
 .addFriendBtn:hover {
