--- a/client/src/components/unique/chat.module.css
+++ b/client/src/components/unique/chat.module.css
@@ -25,46 +25,11 @@
   /* background: lightcoral; */
 }
 
-.chatExchange {
-  height: 88.5%;
-}
-
-.typeContainer {
-  height: 10em;
-  width: 100%;
-}
-
-.typeBox {
-  width: 100%;
-  height: 100%;
-  border-radius: 0.5em;
-  padding: 0.5em;
-  background: rgb(75, 75, 75);
-  color: aliceblue;
-  border: none;
-  outline: none;
-}
-
-.typeBox:hover {
-  border: none;
-  outline: none;
-}
-
-.typeBox:active {
-  border: none;
-  outline: none;
-}
-
-.typeBox:focus {
-  border: none;
-  outline: none;
-}
-
 .writeIcon {
   font-size: 1.4em;
-  padding: .3em;
-  border-radius: .5em;
-  align-self:flex-end ;
+  padding: 0.3em;
+  border-radius: 0.5em;
+  align-self: flex-end;
   background: rgb(141, 0, 66);
   color: rgb(0, 0, 0);
 }
@@ -82,10 +47,12 @@
   flex-grow: 2;
 }
 
+/* ============================  Seach your Chat ====================================== */
+
 .chatSearchContainer {
   background: rgb(75, 75, 75);
-  border-radius: .3em;
-  padding: .5em 1em;
+  border-radius: 0.3em;
+  padding: 0.5em 1em;
   display: flex;
   flex-grow: 10;
   border-radius: 1em;
@@ -96,8 +63,8 @@
 }
 .chatSearch {
   width: 100%;
-  padding: .5em;
-  border-radius: .5em;
+  padding: 0.5em;
+  border-radius: 0.5em;
   background: transparent;
   outline: none;
   border: none;
@@ -105,32 +72,140 @@
 }
 
 .chatSearch::placeholder {
-  color: black
+  color: aliceblue;
 }
 
 .eachChat {
   width: auto;
   max-width: 100%;
   /* background:rgb(141, 0, 66); */
-  padding: .5em;
+  padding: 0.5em;
   display: flex;
-  border-radius: .3em;
-  transition: .2s;
+  border-radius: 0.3em;
+  transition: 0.2s;
+  cursor: pointer;
 }
 .eachChat:hover {
   cursor: pointer;
   background: rgb(75, 75, 75);
   transition: 0s;
-
 }
 
 .chatIcon {
   font-size: 3em;
-  background:rgb(141, 0, 66);
+  background: rgb(141, 0, 66);
   border-radius: 2em;
 }
 
 .otherUserInfo {
   align-self: center;
-  padding: 0em 0em 0em .3em;
+  padding: 0em 0em 0em 0.3em;
+  color: aliceblue;
+}
+/* ============================  Populating Messages ====================================== */
+
+.chatExchange {
+  height: 88.5%;
+  display: flex;
+  flex-direction: column;
+  margin: 1em 0em 0em 0em;
+}
+
+.msgUserBubble {
+  color: aliceblue;
+  background: rgb(141, 0, 66);
+  width:fit-content;
+  padding: .5em;
+  border-radius: 1em;
+  margin: .1em 0em;
+  align-self: flex-end;
+}
+
+.msgOtherUserBubble {
+  color: aliceblue;
+  background: rgb(75, 75, 75);
+  width:fit-content;
+  padding: .5em;
+  border-radius: 1em;
+  margin: .1em 0em;
+  align-self: flex-start;
+}
+
+.noMsg {
+  height: 100%;
+  font-size: 2em;
+  color: aliceblue;
+}
+
+/* ============================  Write your Messages ====================================== */
+
+.typingContainer {
+  height: 3em;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background: rgb(75, 75, 75);
+  border-radius: 0.5em;
+  padding: 0.5em;
+}
+
+.sendMsgIcon {
+  font-size: 2em;
+  /* color:rgb(141, 0, 66); */
+  border-radius: 0.7em;
+  background: rgb(141, 0, 66);
+  padding: 0.3em;
+  align-self: center;
+}
+
+.sendMsgIcon {
+  font-size: 2em;
+  /* color:rgb(141, 0, 66); */
+  border-radius: 0.7em;
+  background: rgb(141, 0, 66);
+  padding: 0.3em;
+  align-self: center;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.sendMsgIcon:hover {
+  background: rgb(0, 0, 0);
+  color: rgb(141, 0, 66);
+  transition: 0s;
+}
+
+.sendMsgIcon:active {
+  padding: 0.4em;
+  font-size: 1.8em;
+}
+
+.typeBox {
+  /* width: 100%;
+  height: 100%; */
+  background: rgb(75, 75, 75);
+  margin: 0em 1em 0em 0em;
+  color: aliceblue;
+  border: none;
+  outline: none;
+  flex-grow: 25;
+}
+
+.typeBox::placeholder {
+  color: aliceblue;
+}
+
+.typeBox:hover {
+  border: none;
+  outline: none;
+}
+
+.typeBox:active {
+  border: none;
+  outline: none;
+}
+
+.typeBox:focus {
+  border: none;
+  outline: none;
 }
