--- a/client/src/pages/userProfile.module.css
+++ b/client/src/pages/userProfile.module.css
@@ -4,6 +4,12 @@
 
 .profilePic {
   font-size: 15em;
+  background: rgb(141, 0, 66);
+  border-radius: 2em;
+}
+
+.profileName {
+  color:rgb(236, 236, 236);
 }
 
 .postsAndFriends {
@@ -114,10 +120,13 @@
 .friendPic {
   font-size: 4em;
   align-self: center;
+  background: rgb(141, 0, 66);
+  border-radius: 2em;
   /*   background: rgb(141, 0, 66); */
 }
 
 .friendName {
   font-size: 2em;
   align-self: center;
+  color:rgb(202, 202, 202);
 }
